--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -28,7 +28,6 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -60,6 +59,7 @@ button:focus-visible {
 }
 
 #app {
+  width: 80%;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
